test/classes/initializers/errors/iteratorPostinitMethodCalled.good
iteratorPostinitMethodCalled.chpl:2: error: iterators can't be the postinit method, please rename this iterator
